Make play btn tabbable and fix timestamp alignment

--- a/index.css
+++ b/index.css
@@ -6,6 +6,15 @@ body {
   text-align: center !important;
 }
 
+.plain-btn {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+}
+
 #container {
   max-width: 500px !important;
 }
